--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
       </section>
       <section class="galery">
         <div class="container galery__container">
+          <h2 class="section-title visually-hidden">Галерея</h2>
           <p class="section-description galery__section-description">
             На латинском языке “барба” означает “борода”
           </p>
@@ -630,22 +631,24 @@
                   class="reg-form__input reg-form__name"
                   type="text"
                   name="name"
-                  id="name"
+                  id="reg-name"
                   placeholder=" "
                   required
                 />
-                <label class="reg-form__label" for="name">Имя&#x0002A;</label>
+                <label class="reg-form__label" for="reg-name"
+                  >Имя&#x0002A;</label
+                >
               </div>
               <div class="reg-form__field">
                 <input
                   class="reg-form__input reg-form__tel"
                   type="tel"
                   name="tel"
-                  id="tel"
+                  id="reg-tel"
                   placeholder=" "
                   required
                 />
-                <label class="reg-form__label" for="tel"
+                <label class="reg-form__label" for="reg-tel"
                   >Телефон&#x0002A;</label
                 >
               </div>
