sass compiler settings changed

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 type="checkbox"
                 name="policy"
                 id="policy"
-                class="form__policy-checkbox"
+                class="form__policy-checkbox visually-hidden"
               />
               <label for="policy" class="form__policy-label">
                 <span class="form__icon-checkbox">
